--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@
     --font-montserrat: 'Montserrat', sans-serif;
 
 }
+
+
+/* common css */
+.commonpera {
+    @apply font-montserrat text-primary text-[14px] leading-[20px] ;
+}
