heading common css && view all component update

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@
 ::-webkit-scrollbar-thumb {
     @apply bg-brand rounded-[10px]
 }
+
+.commonHead {
+    @apply font-poppins font-semibold text-4xl text-primary leading-[46px]
+}
